#post repository tests refactoring